Update copy to reference latest from Narrator Group

--- a/app/index.html
+++ b/app/index.html
@@ -81,7 +81,8 @@
               </div>
               <div id="contact-info">
                 <div>The Narrator Group</div>
-                <div><a href="tel:+1-720-295-8680">720.295.8680</a></div>
+                <div><a href="tel:+1-303-566-4028">303.566.4028</a></div>
+                <div><a href="tel:+1-800-217-0736">800.217.0736</a></div>
                 <div><a href="mailto:storyteller@narratorgroup.com">Email</a></div>
               </div>
             </div>
@@ -294,9 +295,9 @@
             <div id="approach-main">
               <h2>APPROACH</h2>
               <h1>Stories are better than ads</h1>
-              <div class="main">There&#8217;s a reason people tune out marketing messages. They&#8217;re flooded with them. Ads interrupt stories we care about. But stories are different. A well-told story reveals truth and stays with us. It stirs our emotions and can lead us to action. Telling stories is how we naturally relate to each other. We grow brands by turning marketing messages into stories that people want to see and hear.
+              <div class="main">There’s a reason people tune out marketing messages. They’re flooded with them. Ads interrupt the stories we care about. But a well-told story reveals truth and stays with us. It stirs our emotions and can lead us to action. We grow brands by turning marketing messages into stories that people want to see and hear.
               </div>
-              <div class="main-mobile">Telling stories is how we naturally relate to each other, but standard Ads interrupt stories. At Narrator, we grow brands by turning marketing messages into stories that people want to see and hear.
+              <div class="main-mobile">There’s a reason people tune out marketing messages. They’re flooded with them. But a well-told story reveals truth and stays with us. We grow brands by turning marketing messages into stories that people want to see and hear.
               </div>
               <div id="approach-quote-desktop">
                 <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
@@ -338,10 +339,10 @@
           <div id="section-about-flex" class="content-centered">
             <h2>ABOUT</h2>
             <h1>Creating stories that sell</h1>
-            <div class="main">Companies and brands come to us to draw and move audiences. Our sole focus is helping brands uncover the story that makes them distinctive and then tell that story well. Clients have looked to us to launch new brands. To revive old or stagnating ones. To talk to people across the country and film around the world.</div>
-            <div class="sub">And they&#8217;ve relied on us to bring a room full of folded-arm executives to enthusiastic agreement on a messaging strategy. Achieving the business results our clients seek begins with showing them how to tell a better brand story.</div>
-            <div class="main-mobile">Companies and brands come to us to draw and move audiences. Our sole focus is helping brands uncover the story that makes them distinctive and then tell that story well.</div>
-            <div class="sub-mobile">Clients have relied on us to bring a room full of folded-arm executives to enthusiastic agreement on a messaging strategy. Achieving the business results our clients seek begins with showing them how to tell a better brand story.</div>
+            <div class="main">Our sole focus is helping brands uncover the story that makes them distinctive and then tell that story well. Clients have looked to us to launch new brands. To revive old or stagnating ones. To talk to people across the country and film around the world.</div>
+            <div class="sub">And they’ve relied on us to bring rooms full of folded-arm executives to enthusiastic agreement on a messaging strategy. Achieving the business results our clients seek begins with helping them tell a better brand story.</div>
+            <div class="main-mobile">Our sole focus is helping brands uncover the story that makes them distinctive and then tell that story well. Clients have looked to us to launch new brands. To revive old or stagnating ones. To talk to people across the country and film around the world.</div>
+            <div class="sub-mobile">And they’ve relied on us to bring rooms full of folded-arm executives to enthusiastic agreement on a messaging strategy.</div>
             <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
             <div class="quote">
               <div class="quote-text quote-orange">&quot;90% of people watch videos to guide product decision making&quot;</div>
@@ -549,7 +550,7 @@
             <h2>Music Creative Services</h2>
             <h1>No one ever danced to a mission statement</h1>
             <div class="white-line"></div>
-            <div class="content">Your logo. Your colors. Your advertising. Your tagline. These are all important to your brand. But let’s be honest. No one has ever hummed to a logo or danced to a mission statement. We bring together brand and ad experts with musicians and composers to create something more memorable and entirely new: brand music.</div>
+            <div class="content">Your logo. Your colors. Your advertising. Your tagline. These are all important to your brand. But let’s be honest. No one has ever hummed to a logo or danced to a mission statement. We bring together brand and ad experts with musicians and composers to create something more memorable and entirely new: branded music.</div>
             <ul>
               <li>Soundtracks for TV, radio and podcasts</li>
               <li>Custom music for digital videos, trade shows and presentations</li>
@@ -579,7 +580,7 @@
             <h2>DESIGN CREATIVE SERVICES</h2>
             <h1>Even a new logo should tell a story</h1>
             <div class="white-line"></div>
-            <div class="content">Unlike some firms who push around colors and shapes without a plan, everything we do is with thought and purpose. After finding the best message for your brand, we bring your design elements and materials to life in ways that command attention. We believe even a new logo design can and should tell a story.</div>
+            <div class="content">People have responded to the growing number of digital and mobile ads by developing strategies for ignoring them. Our focus on creating stories that audiences care about delivers results that digital agencies can’t match. In fact client research has show our digital creative dramatically increase view through and click through rates.</div>
             <ul>
               <li>Logos, identity, typography, brand colors</li>
               <li>Digital, collateral, print and trade print</li>
@@ -745,11 +746,11 @@
     <div id="desktop-menu">
       <ul>
         <li id="nav-section-campfire"><a href="#campfire">HOME</a></li>
-        <li id="nav-section-about"><a href="#about">ABOUT US</a></li>
-        <li id="nav-section-approach"><a href="#approach">OUR APPROACH</a></li>
-        <li id="nav-section-work"><a href="#work">OUR WORK</a></li>
-        <li id="nav-section-workshop"><a href="#workshop">WORKSHOP</a></li>
-        <li id="nav-section-story-type"><a href="#story-type">STORYTELLING</a></li>
+        <li id="nav-section-about"><a href="#about">ABOUT</a></li>
+        <li id="nav-section-approach"><a href="#approach">APPROACH</a></li>
+        <li id="nav-section-work"><a href="#work">WORK</a></li>
+        <li id="nav-section-workshop"><a href="#workshop">STRATEGIC SERVICES</a></li>
+        <li id="nav-section-story-type"><a href="#story-type">CREATIVE SERVICES</a></li>
         <li id="nav-section-contact"><a href="#contact">CONTACT</a></li>
       </ul>
     </div>
@@ -765,13 +766,13 @@
           <div class="mobile-nav">
             <ul class="section-1">
               <li><a href="#campfire">HOME</a></li>
-              <li><a href="#about">ABOUT US</a></li>
-              <li><a href="#approach">OUR APPROACH</a></li>
-              <li><a href="#work">OUR WORK</a></li>
+              <li><a href="#about">ABOUT</a></li>
+              <li><a href="#approach">APPROACH</a></li>
+              <li><a href="#work">WORK</a></li>
             </ul>
             <ul class="section-2">
-              <li><a href="#workshop">WORKSHOP</a></li>
-              <li><a href="#story-type">STORYTELLING</a></li>
+              <li><a href="#workshop">STRATEGIC SERVICES</a></li>
+              <li><a href="#story-type">CREATIVE SERVICES</a></li>
               <li><a href="#contact">CONTACT</a></li>
             </ul>
           </div>
