Add wrapper for workshop-detail

--- a/app/index.html
+++ b/app/index.html
@@ -383,7 +383,7 @@
         </div>
       </div>
     </div>
-    <div id="subsection-workshop-detail" class="subsection item">
+    <div id="subsection-workshop-detail" class="subsection popup">
       <div class="subsection-child" class="subsection-child">
         <div id="workshop-close">
           <a href="javascript:leaveSubSection()">
@@ -434,7 +434,7 @@
         </div>
       </div>
     </div>
-    <div id="subsection-carousel">
+    <div id="subsection-carousel" class="popup">
       <div id="subsection-close">
         <a href="javascript:leaveSubSection()">
         <i class="fa fa-close"></i>
