Add parallax snap to

--- a/app/index.html
+++ b/app/index.html
@@ -162,7 +162,7 @@
             <div class="work-right">
               <h2>STRATEGIC SERVICES</h2>
               <h1>Finding your story</h1>
-              <div class="main">Most marketers have it backwards. They fixate on tactics rather than the message. And that&#8217;s why a lot of marketing fails. But if you get back to Why&#8212;your brand&#8217;s reason for being and the reason others should care&#8212;then things start to happen</div>
+              <div class="main">Most marketers have it backwards. They fixate on tactics rather than the message. And that&#8217;s why a lot of marketing fails. But if you get back to Why&#8212;your brand&#8217;s reason for being and the reason others should care&#8212;then things start to happen.</div>
               <div class="main">You start to find your story. People start paying attention and they start telling others about you. We offer clients a unique process to uncover and find their unique and compelling story. We call it the Story Workshop.</div>
               <a class="btn btn-default" href="#workshop-detail">STORY WORKSHOP DETAILS</a>
             </div>
@@ -792,6 +792,7 @@
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.3.1/gl-matrix-min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenLite.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/plugins/ScrollToPlugin.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/plugins/CSSPlugin.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script>
