Fix background gradient bug

--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
     </style>
   </head>
   <body>
+    <div id="gradient"></div>
     <canvas id="stars"></canvas>
     <canvas id="embers"></canvas>
     <div id="sections">
