Change headings for menu items

--- a/app/index.html
+++ b/app/index.html
@@ -359,8 +359,8 @@
           <div id="section-campfire-flex" class="content-centered">
             <div id="campfire-wrapper">
               <h1>Some brands have a good story but aren&#8217;t telling it well.  Others don&#8217;t know or have lost sight of their story.</h1>
-              <a id="btn-find-story" class="btn btn-default" href="#workshop">FINDING YOUR STORY</a>
-              <a id="btn-telling-it" class="btn btn-default" href="#story">TELLING IT BETTER</a>
+              <a id="btn-find-story" class="btn btn-default" href="#workshop">FIND YOUR STORY</a>
+              <a id="btn-telling-it" class="btn btn-default" href="#story">TELL IT BETTER</a>
             </div>
             <div id="campfire-aside">
               <div>The human need for stories is enduring and mysterious. Great stories stay with us&#8212;and the best storytellers make us want to linger and find out what happens next.</div>
@@ -750,8 +750,8 @@
         <li id="nav-section-about"><a href="#about">ABOUT</a></li>
         <li id="nav-section-approach"><a href="#approach">APPROACH</a></li>
         <li id="nav-section-work"><a href="#work">WORK</a></li>
-        <li id="nav-section-workshop"><a href="#workshop">STRATEGIC SERVICES</a></li>
-        <li id="nav-section-story-type"><a href="#story-type">CREATIVE SERVICES</a></li>
+        <li id="nav-section-workshop"><a href="#workshop">STRATEGY</a></li>
+        <li id="nav-section-story-type"><a href="#story-type">CREATIVE</a></li>
         <li id="nav-section-contact"><a href="#contact">CONTACT</a></li>
       </ul>
     </div>
@@ -772,8 +772,8 @@
               <li><a href="#work">WORK</a></li>
             </ul>
             <ul class="section-2">
-              <li><a href="#workshop">STRATEGIC SERVICES</a></li>
-              <li><a href="#story-type">CREATIVE SERVICES</a></li>
+              <li><a href="#workshop">STRATEGY</a></li>
+              <li><a href="#story-type">CREATIVE</a></li>
               <li><a href="#contact">CONTACT</a></li>
             </ul>
           </div>
