Add links to homepage social icons

--- a/app/index.html
+++ b/app/index.html
@@ -372,14 +372,10 @@
         </div>
         <div class="social-fixed-wrapper">
           <div class="social-fixed">
-            <a href="#"><i class="fa fa-youtube"></i></a>
-            <a href="#"><i class="fa fa-vimeo"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-instagram"></i></a>
-            <a href="#"><i class="fa fa-pinterest-p"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
-            <a href="#"><i class="fa fa-google-plus"></i></a>
+            <a href="https://vimeo.com/narratorgroup"><i class="fa fa-vimeo"></i></a>
+            <a href="https://www.facebook.com/narratorgroup/"><i class="fa fa-facebook"></i></a>
+            <a href="https://twitter.com/narratorgroup"><i class="fa fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/company/the-narrator-group"><i class="fa fa-linkedin"></i></a>
           </div>
         </div>
       </div>
