Add video to design creative services subsection

--- a/app/index.html
+++ b/app/index.html
@@ -573,7 +573,10 @@
         </div>
         <div id="subsection-design" class="subsection item" slide="3">
           <div class="subsection-child" class="subsection-child">
-            <img class="main-image" src="/images/image-design-header.jpg" />
+            <a class="vimeo" href="https://vimeo.com/130335009">
+              <img src="https://i.vimeocdn.com/video/522153046_500.jpg">
+              <i class="fa fa-play"></i>
+            </a>
             <h2>DESIGN CREATIVE SERVICES</h2>
             <h1>Even a new logo should tell a story</h1>
             <div class="white-line"></div>
