Fix copy text in Design subsection

--- a/app/index.html
+++ b/app/index.html
@@ -581,7 +581,7 @@
             <h2>DESIGN CREATIVE SERVICES</h2>
             <h1>Even a new logo should tell a story</h1>
             <div class="white-line"></div>
-            <div class="content">People have responded to the growing number of digital and mobile ads by developing strategies for ignoring them. Our focus on creating stories that audiences care about delivers results that digital agencies can’t match. In fact client research has show our digital creative dramatically increase view through and click through rates.</div>
+            <div class="content">Unlike some firms who push around colors and shapes without a plan, everything we do is with thought and purpose. After finding the best message for your brand, we bring your design elements and materials to life in ways that command attention. We believe even a new logo design can and should tell a good story.</div>
             <ul>
               <li>Logos, identity, typography, brand colors</li>
               <li>Digital, collateral, print and trade print</li>
