--- a/app/index.html
+++ b/app/index.html
@@ -751,7 +751,7 @@
         <li id="nav-section-approach"><a href="#approach">APPROACH</a></li>
         <li id="nav-section-work"><a href="#work">WORK</a></li>
         <li id="nav-section-workshop"><a href="#workshop">STRATEGY</a></li>
-        <li id="nav-section-story-type"><a href="#story-type">CREATIVE</a></li>
+        <li id="nav-section-story-type"><a href="#story-type">SERVICES</a></li>
         <li id="nav-section-contact"><a href="#contact">CONTACT</a></li>
       </ul>
     </div>
@@ -773,7 +773,7 @@
             </ul>
             <ul class="section-2">
               <li><a href="#workshop">STRATEGY</a></li>
-              <li><a href="#story-type">CREATIVE</a></li>
+              <li><a href="#story-type">SERVICES</a></li>
               <li><a href="#contact">CONTACT</a></li>
             </ul>
           </div>
