--- a/app/index.html
+++ b/app/index.html
@@ -361,7 +361,7 @@
             <div id="campfire-wrapper">
               <h1>Some brands have a good story but aren&#8217;t telling it well.  Others don&#8217;t know or have lost sight of their story.</h1>
               <a id="btn-find-story" class="btn btn-default" href="#workshop">FIND YOUR STORY</a>
-              <a id="btn-telling-it" class="btn btn-default" href="#story">TELL IT BETTER</a>
+              <a id="btn-telling-it" class="btn btn-default" href="#story-type">TELL IT BETTER</a>
             </div>
             <div id="campfire-aside">
               <div>The human need for stories is enduring and mysterious. Great stories stay with us&#8212;and the best storytellers make us want to linger and find out what happens next.</div>
@@ -382,52 +382,54 @@
       </div>
     </div>
     <div id="subsection-workshop-detail" class="subsection popup">
-      <div class="subsection-child" class="subsection-child">
+      <div id="subsection-workshop-wrapper">
         <div id="workshop-close">
           <a href="javascript:leaveSubSection()">
             <i class="fa fa-close"></i>
           </a>
         </div>
-        <img id="workshop-image" src="/images/image-woman.jpg" />
-        <h2>STORY WORKSHOP</h2>
-        <h1>Most brands are telling a story, just not the right one.</h1>
-        <div class="white-line"></div>
-        <div class="content">Each Story Workshop includes:</div>
-        <ol>
-          <li>A brand review to assess
-            <ul>
-              <li>Your current story and how it can be improved</li>
-            </ul>
-          </li>
-          <li>A workbook of exercises to
-            <ul>
-              <li>Identify and define your brand personality and character</li>
-              <li>Reveal the challenges and obstacles to be resolved</li>
-              <li>Find the point of emotional leverage</li>
-              <li>Create a Story Plot<sup>&#169;</sup> to define what your brand story is all about</li>
-              <li>Develop a Story Message Map<sup>&#169;</sup> to guide how the story unfolds</li>
-            </ul>
-          </li>
-          <li>A framework bringing all marketing efforts around the core story
-            <ul>
-              <li>Draft and final versions of the brand Story Plot<sup>&#169;</sup> and Story Message Map<sup>&#169;</sup></li>
-            </ul>
-          </li>
-        </ol>
-        <img class="icon" src="images/icon-workshop.png" />
-        <div class="quote-blue">&quot;We found a message everyone could get behind. More importantly, we found a good story. We're looking to bring their workshop to other parts of the company.&quot;</div>
-        <h2>LESLIE RUSSEL, VP COMCAST WHOLESALE</h2>
-        <div id="workshop-callout" class="callout">SCHEDULE YOUR FULL OR HALF-DAY WORKSHOP</div>
-        <div id="contact-section">
-          <div id="contact-fields">
-            <input type="text" placeholder="FIRST NAME" />
-            <input type="text" placeholder="LAST NAME" />
-            <input type="text" placeholder="COMPANY" />
-            <input type="text" placeholder="E-MAIL ADDRESS" />
-            <input type="text" placeholder="PHONE" />
-          </div>
-          <div id="contact-info">
-            <div>We will contact you to discuss your needs, share additional details about the workshop and provide pricing</div>
+        <div class="subsection-child">
+          <img id="workshop-image" src="/images/image-woman.jpg" />
+          <h2>STORY WORKSHOP</h2>
+          <h1>Most brands are telling a story, just not the right one.</h1>
+          <div class="white-line"></div>
+          <div class="content">Each Story Workshop includes:</div>
+          <ol>
+            <li>A brand review to assess
+              <ul>
+                <li>Your current story and how it can be improved</li>
+              </ul>
+            </li>
+            <li>A workbook of exercises to
+              <ul>
+                <li>Identify and define your brand personality and character</li>
+                <li>Reveal the challenges and obstacles to be resolved</li>
+                <li>Find the point of emotional leverage</li>
+                <li>Create a Story Plot<sup>&#169;</sup> to define what your brand story is all about</li>
+                <li>Develop a Story Message Map<sup>&#169;</sup> to guide how the story unfolds</li>
+              </ul>
+            </li>
+            <li>A framework bringing all marketing efforts around the core story
+              <ul>
+                <li>Draft and final versions of the brand Story Plot<sup>&#169;</sup> and Story Message Map<sup>&#169;</sup></li>
+              </ul>
+            </li>
+          </ol>
+          <img class="icon" src="images/icon-workshop.png" />
+          <div class="quote-blue">&quot;We found a message everyone could get behind. More importantly, we found a good story. We're looking to bring their workshop to other parts of the company.&quot;</div>
+          <h2>LESLIE RUSSEL, VP COMCAST WHOLESALE</h2>
+          <div id="workshop-callout" class="callout">SCHEDULE YOUR FULL OR HALF-DAY WORKSHOP</div>
+          <div id="contact-section">
+            <div id="contact-fields">
+              <input type="text" placeholder="FIRST NAME" />
+              <input type="text" placeholder="LAST NAME" />
+              <input type="text" placeholder="COMPANY" />
+              <input type="text" placeholder="E-MAIL ADDRESS" />
+              <input type="text" placeholder="PHONE" />
+            </div>
+            <div id="contact-info">
+              <div>We will contact you to discuss your needs, share additional details about the workshop and provide pricing</div>
+            </div>
           </div>
         </div>
       </div>
