Fix for touchswipe

--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,7 @@
           </div>
         </div>
       </div>
-      <div id="contact" class="touchswipe"></div>
+      <div id="contact"></div>
       <div id="section-contact" class="section">
         <div id="section-contact-child" class="section-child">
           <div id="section-contact-flex" class="content-centered">
@@ -91,7 +91,7 @@
           </div>
         </div>
       </div>
-      <div id="story-type" class="touchswipe"></div>
+      <div id="story-type"></div>
       <div id="section-story-type" class="section">
         <div id="section-story-type-child" class="section-child">
           <div id="section-story-type-flex" class="content-centered">
@@ -157,7 +157,7 @@
           </div>
         </div>
       </div>
-      <div id="workshop" class="touchswipe"></div>
+      <div id="workshop"></div>
       <div id="section-workshop" class="section">
         <div id="section-workshop-child" class="section-child">
           <div id="section-workshop-flex" class="content-centered">
@@ -203,7 +203,7 @@
           </div>
         </div>
       </div>
-      <div id="work" class="touchswipe"></div>
+      <div id="work"></div>
       <div id="section-work" class="section">
         <div id="section-work-child" class="section-child">
           <div id="section-work-flex" class="content-centered">
@@ -290,7 +290,7 @@
           </div>
         </div>
       </div>
-      <div id="approach" class="touchswipe"></div>
+      <div id="approach"></div>
       <div id="section-approach" class="section">
         <div id="section-approach-child" class="section-child">
           <div id="section-approach-flex" class="content-centered">
@@ -335,7 +335,7 @@
           </div>
         </div>
       </div>
-      <div id="about" class="touchswipe"></div>
+      <div id="about"></div>
       <div id="section-about" class="section">
         <div id="section-about-child" class="section-child">
           <div id="section-about-flex" class="content-centered">
@@ -354,7 +354,7 @@
           </div>
         </div>
       </div>
-      <div id="campfire" class="touchswipe"></div>
+      <div id="campfire"></div>
       <div id="section-campfire" class="section">
         <div id="section-campfire-child" class="section-child">
           <div id="section-campfire-flex" class="content-centered">
