--- a/app/index.html
+++ b/app/index.html
@@ -244,7 +244,7 @@
               </div>
             </div>
             <div class="work-btn-wrapper">
-              <a class="btn btn-default" href="#">SEE MORE</a>
+              <a class="btn btn-default" href="https://vimeo.com/narratorgroup">SEE MORE</a>
             </div>
           </div>
           <div id="section-work-flex-mobile" class="content-centered">
