Add video to video subsection

--- a/app/index.html
+++ b/app/index.html
@@ -443,7 +443,10 @@
       <div class="owl-carousel">
         <div id="subsection-video" class="subsection item" slide="0">
           <div class="subsection-child" class="subsection-child">
-            <img class="main-image" src="/images/video-2.jpg" />
+            <a class="vimeo" href="https://vimeo.com/134246926">
+              <img src="https://i.vimeocdn.com/video/527666682_500.jpg">
+              <i class="fa fa-play"></i>
+            </a>
             <h2>VIDEO CREATIVE SERVICES</h2>
             <h1>Video is no longer a novelty, but good video is</h1>
             <div class="white-line"></div>
