Fix dock icons shifting on section change

--- a/app/index.html
+++ b/app/index.html
@@ -727,9 +727,9 @@
           </div>
         </div>
       </div>
-      <div class="subsection-dock">
-        <div style="position:relative; text-align: center; margin-top: 0.5rem;">
-          <div style="display:inline-block; margin: 0 auto;">
+      <div class="subsection-dock-wrapper">
+        <div id="subsection-dock-parent">
+          <div id="subsection-dock">
             <div class="dockBG"></div>
             <a data-href="#video" class="dock-item" slide="0">
               <img src="images/icon-video.png" alt="Video subsection" /></a>
