Small CSS updates for mobile

--- a/app/index.html
+++ b/app/index.html
@@ -277,7 +277,7 @@
               </div>
             </div>
             <div class="work-btn-wrapper">
-              <a class="btn btn-default" href="#">SEE MORE</a>
+              <a class="btn btn-default" href="https://vimeo.com/narratorgroup" target="_blank">SEE MORE</a>
             </div>
             <div class="work-quote">
               <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
