Alter styles to match new comp for Contact section

--- a/app/index.html
+++ b/app/index.html
@@ -69,24 +69,14 @@
               </div>
               <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
             </div>
-            <div id="contact-right">
-              <div id="contact-text">Let&#8217;s find your best story and tell it together</div>
-              <div class="line"></div>
-              <div id="contact-fields">
-                <input type="text" placeholder="NAME" />
-                <input type="text" placeholder="PHONE NUMBER" />
-                <input type="text" placeholder="E-MAIL ADDRESS" />
-                <input type="text" placeholder="SUBJECT" />
-                <input type="text" placeholder="MESSAGE" />
-                <div id="line2" class="line"></div>
-                <a class="btn btn-default" href="#">SEND</a>
+            <div id="contact-text">Let&#8217;s find your best story and tell it together</div>
+            <div id="contact-info">
+              <div>The Narrator Group</div>
+              <div> Phone
+                <a href="tel:+1-800-217-0736" class="phone">800.217.0736</a>
+                <a href="tel:+1-303-566-4028" class="phone">303.566.4028</a>
               </div>
-              <div id="contact-info">
-                <div>The Narrator Group</div>
-                <div><a href="tel:+1-303-566-4028">303.566.4028</a></div>
-                <div><a href="tel:+1-800-217-0736">800.217.0736</a></div>
-                <div><a href="mailto:storyteller@narratorgroup.com">Email</a></div>
-              </div>
+              <div><a href="mailto:storyteller@narratorgroup.com">storyteller@narratorgroup.com</a></div>
             </div>
           </div>
         </div>
