Fix Contact section title font

--- a/app/index.html
+++ b/app/index.html
@@ -69,7 +69,7 @@
               </div>
               <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
             </div>
-            <div id="contact-text">Let&#8217;s find your best story and tell it together</div>
+            <h1 id="contact-text">Let&#8217;s find your best story and tell it together</h1>
             <div id="contact-info">
               <div>The Narrator Group</div>
               <div> Phone
