Fix flip to portrait image

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,10 @@
     <div id="gradient"></div>
     <canvas id="stars"></canvas>
     <canvas id="embers"></canvas>
-    <div id="landscape">Website best viewed in portrait</div>
+    <div id="landscape">
+      <img src="/images/flipToPortrait.png">
+      <div>This website is best viewed in portrait format</div>
+    </div>
     <div id="sections">
       <!--[if lt IE 10]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
