Recolor desktop subsections

--- a/app/index.html
+++ b/app/index.html
@@ -98,25 +98,25 @@
             <div class="story-types">
               <div class="story-type">
                 <a href="#video">
-                  <img src="images/icon-video.png" alt="Video icon" />
+                  <img src="images/icon-video-white.png" alt="Video icon" />
                   <span>Video</span>
                 </a>
               </div>
               <div class="story-type">
                 <a href="#branding">
-                  <img src="images/icon-branding.png" alt="Branding icon" />
+                  <img src="images/icon-branding-white.png" alt="Branding icon" />
                   <span>Branding</span>
                 </a>
               </div>
               <div class="story-type">
                 <a href="#music">
-                  <img src="images/icon-music.png" alt="Music icon" />
+                  <img src="images/icon-music-white.png" alt="Music icon" />
                   <span>Music</span>
                 </a>
               </div>
               <div class="story-type">
                 <a href="#design">
-                  <img src="images/icon-design.png" alt="Design icon" />
+                  <img src="images/icon-design-white.png" alt="Design icon" />
                   <span>Design</span>
                 </a>
               </div>
@@ -124,25 +124,25 @@
             <div class="story-types">
               <div class="story-type">
                 <a href="#digital">
-                  <img src="images/icon-digital.png" alt="Digital icon" />
+                  <img src="images/icon-digital-white.png" alt="Digital icon" />
                   <span>Digital</span>
                 </a>
               </div>
               <div class="story-type">
                 <a href="#social">
-                  <img src="images/icon-network.png" alt="Social icon" />
+                  <img src="images/icon-network-white.png" alt="Social icon" />
                   <span>Social</span>
                 </a>
               </div>
               <div class="story-type">
                 <a href="#content">
-                  <img src="images/icon-content.png" alt="Content icon" />
+                  <img src="images/icon-content-white.png" alt="Content icon" />
                   <span>Content</span>
                 </a>
               </div>
               <div class="story-type">
                 <a href="#broadcast">
-                  <img src="images/icon-broadcast.png" alt="Broadcast icon" />
+                  <img src="images/icon-broadcast-white.png" alt="Broadcast icon" />
                   <span>Broadcast</span>
                 </a>
               </div>
@@ -722,21 +722,21 @@
           <div id="subsection-dock">
             <div class="dockBG"></div>
             <a data-href="#video" class="dock-item" slide="0">
-              <img src="images/icon-video.png" alt="Video subsection" /></a>
+              <img src="images/icon-video-white.png" alt="Video subsection" /></a>
             <a data-href="#branding" class="dock-item" slide="1">
-              <img src="images/icon-branding.png" alt="Branding subsection" /></a>
+              <img src="images/icon-branding-white.png" alt="Branding subsection" /></a>
             <a data-href="#music" class="dock-item" slide="2">
-              <img src="images/icon-music.png" alt="Music subsection" /></a>
+              <img src="images/icon-music-white.png" alt="Music subsection" /></a>
             <a data-href="#design" class="dock-item" slide="3">
-              <img src="images/icon-design.png" alt="Design subsection" /></a>
+              <img src="images/icon-design-white.png" alt="Design subsection" /></a>
             <a data-href="#digital" class="dock-item" slide="4">
-              <img src="images/icon-digital.png" alt="Digital subsection" /></a>
+              <img src="images/icon-digital-white.png" alt="Digital subsection" /></a>
             <a data-href="#social" class="dock-item" slide="5">
-              <img src="images/icon-network.png" alt="Social subsection" /></a>
+              <img src="images/icon-network-white.png" alt="Social subsection" /></a>
             <a data-href="#content" class="dock-item" slide="6">
-              <img src="images/icon-content.png" alt="Content subsection" /></a>
+              <img src="images/icon-content-white.png" alt="Content subsection" /></a>
             <a data-href="#broadcast" class="dock-item" slide="7">
-              <img src="images/icon-broadcast.png" alt="Broadcast subsection" /></a>
+              <img src="images/icon-broadcast-white.png" alt="Broadcast subsection" /></a>
           </div>
         </div>
       </div>
