Fix several typo issues, remove cassette click text, and update timeout for updating the hash on scroll

--- a/app/index.html
+++ b/app/index.html
@@ -91,7 +91,7 @@
             <div class="section-story-type-header">
               <h1>Telling your story well</h1>
               <div class="main">Even the best strategy for the greatest product or service quickly runs adrift without the right creative partner.
-                <span class="story-desktop-copy">The right creative partner is collaborative&#8212;and knows how to move audiences to act. Whether your story is best told as a video, logo, web banner, website, or brand music, we work with you to create something memorable and true.</span>
+                <span class="story-desktop-copy">The right creative partner is collaborative&#8212;and knows how to move audiences to act. Whether your story is best told as a video, logo, web banner, website, or branded music, we work with you to create something memorable and true.</span>
                 <span class="story-mobile-copy">We work with a variety of mediums to make your story memorable and true.</span>
               </div>
             </div>
@@ -548,7 +548,7 @@
               <li>Soundtracks for TV, radio and podcasts</li>
               <li>Custom music for digital videos, trade shows and presentations</li>
               <li>Sound design for websites, digital, mobile and social media</li>
-              <li>Mnemoics and distinctive audio signatures</li>
+              <li>Mnemonics and distinctive audio signatures</li>
               <li>Hold music for customer support centers</li>
             </ul>
             <div class="quote-blue">&quot;Research shows music dramatially boosts memory&quot;</div>
@@ -557,14 +557,7 @@
             <div class="quote-blue">&quot;Without music, a brilliant campaign can go unnoticed. With music, a subpar creative production can go viral&quot;</div>
             <h2>ERIC SHEINKOP</h2>
             <a class="btn" href="http://www.brandedmusic.com/">GO TO OUR MUSIC SITE</a>
-            <div class="callout">CLICK ON A CASSETTE TO LISTEN</div>
-            <img class="music-cassette" src="/images/music-cassettes.png" orgWidth="1075" orgHeight="950" usemap="#cassetteMap" alt="Image of four cassettes: Comcast, WOW business, Wyoming Medical Center, and ProBuild" />
-            <map name="cassetteMap" id="cassetteMap">
-              <area alt="" href="http://www.brandedmusic.com/" shape="poly" coords="85,239,983,229,1004,254,991,391,17,441,3,300,28,86,98,85,66,183,70,227"/>
-              <area alt="" href="http://www.brandedmusic.com/" shape="poly" coords="73,442,995,392,1001,322,1053,414,1037,539,82,563"/>
-              <area alt="" href="http://www.brandedmusic.com/" shape="poly" coords="151,660,720,667,765,668,786,660,903,659,920,590,910,549,1033,543,1070,622,1059,730,160,777"/>
-              <area alt="" href="http://www.brandedmusic.com/" shape="poly" coords="158,781,913,740,921,769,908,881,28,848,19,742,49,655,147,665"/>
-            </map>
+            <img class="music-cassette" src="/images/music-cassettes.png" orgWidth="1075" orgHeight="950" alt="Image of four cassettes: Comcast, WOW business, Wyoming Medical Center, and ProBuild" />
           </div>
         </div>
         <div id="subsection-design" class="subsection item" slide="3">
