--- a/app/index.html
+++ b/app/index.html
@@ -548,7 +548,7 @@
             <img class="icon" src="images/icon-music.png" />
             <div class="quote-blue">&quot;Without music, a brilliant campaign can go unnoticed. With music, a subpar creative production can go viral&quot;</div>
             <h2>ERIC SHEINKOP</h2>
-            <a class="btn" href="http://www.brandedmusic.com/">GO TO OUR MUSIC SITE</a>
+            <div><a class="btn" href="http://www.brandedmusic.com/">GO TO OUR MUSIC SITE</a></div>
             <img class="music-cassette" src="/images/music-cassettes.png" orgWidth="1075" orgHeight="950" alt="Image of four cassettes: Comcast, WOW business, Wyoming Medical Center, and ProBuild" />
           </div>
         </div>
