Update branding video

--- a/app/index.html
+++ b/app/index.html
@@ -506,6 +506,11 @@
         </div>
         <div id="subsection-branding" class="subsection item" slide="1">
           <div class="subsection-child" class="subsection-child">
+            <!-- https://fpdl.vimeocdn.com/vimeo-prod-skyfire-std-us/01/14/6/150072807/458432205.mp4?token=56829096_0xe6f1691253b0a64edd2732d79e574680c590cb81 -->
+            <a class="vimeo" href="https://vimeo.com/150072807">
+              <img src="https://i.vimeocdn.com/video/549453638_640.webp">
+              <i class="fa fa-play"></i>
+            </a>
             <h2>BRANDING CREATIVE SERVICES</h2>
             <h1>A brand is much more than a logo</h1>
             <div class="white-line"></div>
