--- a/app/index.html
+++ b/app/index.html
@@ -365,7 +365,10 @@
               <div>The human need for stories is enduring and mysterious. Great stories stay with us&#8212;and the best storytellers make us want to linger and find out what happens next.</div>
             </div>
             <div class="scroll-up">
-              <img alt="Scroll Up" src="images/scroll-up.png" width="100" height="100">
+              <a href="#about">
+                <img alt="Scroll Up" src="images/ezgif.com-reverse.gif" width="100">
+                <img alt="" src="images/moon-bottom.png" width="100">
+              </a>
             </div>
           </div>
         </div>
@@ -558,7 +561,7 @@
             <img class="icon" src="images/icon-music.png" />
             <div class="quote-blue">&quot;Without music, a brilliant campaign can go unnoticed. With music, a subpar creative production can go viral&quot;</div>
             <h2>ERIC SHEINKOP</h2>
-            <div><a class="btn" href="http://www.brandedmusic.com/">GO TO OUR MUSIC SITE</a></div>
+            <div><a class="btn" href="http://www.brandedmusic.com/" target="_blank">GO TO OUR MUSIC SITE</a></div>
             <img class="music-cassette" src="/images/music-cassettes.png" orgWidth="1075" orgHeight="950" alt="Image of four cassettes: Comcast, WOW business, Wyoming Medical Center, and ProBuild" />
           </div>
         </div>
