Sync all subsection header image sizes

--- a/app/index.html
+++ b/app/index.html
@@ -511,7 +511,7 @@
           <div class="subsection-child" class="subsection-child">
             <!-- https://fpdl.vimeocdn.com/vimeo-prod-skyfire-std-us/01/14/6/150072807/458432205.mp4?token=56829096_0xe6f1691253b0a64edd2732d79e574680c590cb81 -->
             <a class="vimeo" href="https://vimeo.com/150072807">
-              <img src="https://i.vimeocdn.com/video/549453638_640.webp">
+              <img src="/images/header-branding.jpg">
               <i class="fa fa-play"></i>
             </a>
             <h2>BRANDING CREATIVE SERVICES</h2>
@@ -568,7 +568,7 @@
         <div id="subsection-design" class="subsection item" slide="3">
           <div class="subsection-child" class="subsection-child">
             <a class="vimeo" href="https://vimeo.com/130335009">
-              <img src="https://i.vimeocdn.com/video/522153046_500.jpg">
+              <img src="/images/header-design.jpg">
               <i class="fa fa-play"></i>
             </a>
             <h2>DESIGN CREATIVE SERVICES</h2>
@@ -597,7 +597,7 @@
         </div>
         <div id="subsection-digital" class="subsection item" slide="4">
           <div class="subsection-child" class="subsection-child">
-            <img class="main-image" src="/images/image-mouse.jpg" />
+            <img class="main-image" src="/images/header-digital.jpg" />
             <h2>DIGITAL CREATIVE SERVICES</h2>
             <h1>Online audiences are hardened and have to be drawn in</h1>
             <div class="white-line"></div>
@@ -625,7 +625,7 @@
         </div>
         <div id="subsection-social" class="subsection item" slide="5">
           <div class="subsection-child" class="subsection-child">
-            <img class="main-image" src="/images/image-men-cellphones.jpg" />
+            <img class="main-image" src="/images/header-social.jpg" />
             <h2>SOCIAL MEDIA CREATIVE SERVICES</h2>
             <h1>Turning your focus from you to your audience</h1>
             <div class="white-line"></div>
@@ -642,7 +642,7 @@
         </div>
         <div id="subsection-content" class="subsection item" slide="6">
           <div class="subsection-child" class="subsection-child">
-            <img class="main-image" src="/images/content-header.jpg" />
+            <img class="main-image" src="/images/header-content.jpg" />
             <h2>CONTENT CREATIVE SERVICES</h2>
             <h1>When people linger,<br> they're more likely to share</h1>
             <div class="white-line"></div>
@@ -659,7 +659,7 @@
         <div id="subsection-broadcast" class="subsection item" slide="7">
           <div class="subsection-child" class="subsection-child">
             <a class="vimeo" href="https://vimeo.com/125032169">
-              <img src="https://i.vimeocdn.com/video/514980407_640.webp">
+              <img src="/images/header-broadcast.jpg">
               <i class="fa fa-play"></i>
             </a>
             <h2>BROADCAST CREATIVE SERVICES</h2>
