--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
     <meta property="og:title" content="The Narrator Group" />
-    <meta property="og:url" content="http://www.narratorgroup.com" />
-    <meta property="og:image" content="/images/opengraph.jpg" />
+    <meta property="og:url" content="http://narrator.jungdigital.com" />
+    <meta property="og:image" content="http://narrator.jungdigital.com/images/opengraph.jpg" />
 
     <title>The Narrator Group</title>
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
