--- a/app/index.html
+++ b/app/index.html
@@ -2,10 +2,11 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="The Narrator Group provides video and digital media services to help you tell your company's story in the best way possible.">
+    <meta name="description" content="The Narrator Group provides video and digital media services to help you tell your company's story in the most effective way possible.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
     <meta property="og:title" content="The Narrator Group" />
+    <meta property="og:description" content="The Narrator Group provides video and digital media services to help you tell your company's story in the most effective way possible." />
     <meta property="og:url" content="http://narrator.jungdigital.com" />
     <meta property="og:image" content="http://narrator.jungdigital.com/images/opengraph.jpg" />
 
